# smart_glove

./: .gitignore  partitions.csv  sdkconfig  sdkconfig.old  Định nghĩa gói tin.xlsx  Định nghĩa gói tin_tiến độ.xlsx
components/at_command/: CMakeLists.txt  at_command.c  process_arry.c
components/at_command/include/: at_command.h
components/cache_manager/: CMakeLists.txt  cache_manager.c
components/cache_manager/include/: cache_manager.h
components/config_parameter/: CMakeLists.txt  config_parameter.h
components/connect_wifi/: CMakeLists.txt  connect_wifi.c
components/connect_wifi/include/: connect_wifi.h
components/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050_v2.c
components/mpu6050/include/: mpu6050.h
components/mqtt_esp32/: CMakeLists.txt  mqtt_esp32.c
components/mqtt_esp32/include/: mqtt_esp32.h
components/save_to_nvs/: CMakeLists.txt  parse_json.c  save_to_nvs.c
components/save_to_nvs/include/: save_to_nvs.h
components/speaker/: CMakeLists.txt  speaker.c
components/speaker/include/: speaker.h
components/ssd1306/: ssd1306.h  ssd1306_i2c_legacy.c
main/: CMakeLists.txt  main.c  main_v2.c  system_manage.c  system_manage.h
